# Homepage

./: a.txt  b.txt
Demo/: CMakeLists.txt  main.cc
Demo/bulid/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Demo.vcxproj  Demo.vcxproj.filters  Demo3.sln  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Demo/bulid/Debug/: Demo.ilk
Demo/bulid/Demo.dir/Debug/Demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Demo.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Demo/bulid/math/: Makefile  MathFunctions.vcxproj  MathFunctions.vcxproj.filters  cmake_install.cmake
Demo/bulid/math/Debug/: MathFunctions.lib
Demo/bulid/math/MathFunctions.dir/Debug/MathFunctions.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Demo/bulid/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
public/source/: publication.md
pyc++/: CMakeLists.txt
pyc++/Pyc++/Project1/: Project1.vcxproj  example.cpp
pyc++/Pyc++/Project1/Debug/: vc141.idb
pyc++/Pyc++/Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
pyc++/Pyc++/Project1/Release/Project1.tlog/: Project1.lastbuildstate
